Fixed issue #2 - Modified base64 encoding with apach commons-codec to remove the JVM internal implementation.